# ofw

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cmake_uninstall.cmake.in  ofw.in  ofw.pot
cmake/: FindIrrlicht.cmake
locale/en/LC_MESSAGES/: ofw.mo
locale/es/LC_MESSAGES/: ofw.mo
media/: Gliptodont.b3d  README.md  Trodon_LOW.b3d  picacode.mtl
po/: en.po  es.po
src/: CMakeLists.txt  character.cpp  character.hpp  characterobserver.hpp  core.cpp  core.hpp  cracker.cpp  cracker.hpp  cte.hpp  designer.cpp  designer.hpp  hacker.cpp  hacker.hpp  hunterbug.cpp  hunterbug.hpp  main.cpp  map.cpp  map.hpp  mapobserver.hpp  objectobserver.hpp  ofw_config.hpp  ofwobserver.hpp  picacode.cpp  picacode.hpp  player.cpp  player.hpp  sector.cpp  sector.hpp  sectorobserver.hpp
src/client/: client.cpp  client.hpp  playermsg.proto
src/core/: core.cpp  core.hpp
src/gui/: irr_event_receiver.cpp  irr_event_receiver.hpp  irr_event_sender.cpp  irr_event_sender.hpp  irr_widget.cpp  irrlicht_widget.cpp  irrlicht_widget.hpp  select_player.cpp  select_player.hpp  select_player.ui
src/scene/: character.cpp  character.hpp  cracker.cpp  designer.cpp  hacker.cpp  hacker.hpp  hunterbug.hpp  map.cpp  map.hpp  mapobserver.hpp  objectobserver.hpp  picacode.hpp  player.hpp  sector.hpp  sectorobserver.hpp
tests/: CMakeLists.txt  character_test.cpp  player_test.cpp
